# Hough-damper-detection

./: CMakeLists.txt  FZCDetector.cpp  FZCDetector_video.cpp  GWLineDetector.cpp  Improved_Hough_Circle_Detection.cpp  LineDetector.cpp  LineDetector2.cpp  README.md  cvTest.cpp  erodeDilate.cpp  erodeTuning.cpp  preProcessParaChange.cpp  wh1_houghCircle.cpp  wh2_houghCircle.cpp  wh3_houghCircle.cpp
